--- a/src/globalStyle/index.css
+++ b/src/globalStyle/index.css
@@ -10,6 +10,7 @@
 
 body {
   color: #fff;
+  scroll-behavior: smooth;
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 8pt;
@@ -167,4 +168,32 @@ section {
 .project-button-close:hover {
   background: #e31b6d;
   color: #fff;
+}
+
+
+.project-buttons {
+  display: flex;
+  width: 45%;
+  justify-content: space-between;
+}
+
+.github-button {
+  background: #00a1a7;
+  border: 0;
+  display: flex;
+  height: 48px;
+  width: 11rem;
+  justify-content: space-evenly;
+  align-items: center;
+  color: rgb(233, 233, 233);
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 600;
+  transition: 300ms;
+}
+
+
+.github-button:hover {
+  background: #fff;
+  color: #00a1a7;
 }
