--- a/src/globalStyle/reference.css
+++ b/src/globalStyle/reference.css
@@ -270,6 +270,7 @@ nav.fixed {
   left: 0;
   position: fixed;
   top: 0;
+  height: 3.2rem;
 }
 nav.fixed.desk {
   animation: popDown 0.5s;
@@ -285,7 +286,9 @@ nav .link-wrap {
   width: 100%;
 }
 nav .link-wrap.visible {
-  height: 220px;
+  /* height: 220px; */
+  height: fit-content;
+  padding-bottom: 0.8rem;
 }
 nav .link-wrap div {
   cursor: pointer;
@@ -430,6 +433,9 @@ section:nth-of-type(2) .label-wrap .label {
 section:nth-of-type(2) .bullet-wrap {
   height: 200px;
   justify-content: flex-start;
+  justify-content: center;
+  /* align-items: center;
+  text-align: center; */
   padding: 0 7px;
 }
 section:nth-of-type(2) .highlight {
@@ -588,7 +594,8 @@ section:nth-of-type(3) .text {
 }
 section:nth-of-type(3) #gallery {
   /* margin: 20px 0; */
-  height: 100%;
+  /* height: 100%; */
+  /* height: fit-content; */
 }
 section:nth-of-type(3) #gallery .text,
 section:nth-of-type(3) #gallery .button {
@@ -801,6 +808,10 @@ footer .footnote .highlight {
   .project-details {
     height: 100vh;
     width: 100vw;
+  }
+  footer .icon-wrap {
+    flex-wrap: wrap;
+    row-gap: 0.5rem ;
   }
 }
 @media screen and (min-width: 600px) {
