--- a/src/globalStyle/reference.css
+++ b/src/globalStyle/reference.css
@@ -695,6 +695,13 @@ section:nth-of-type(4) textarea {
   outline: none;
   padding: 10px 15px;
   width: 100%;
+  font-family: monospace;
+}
+section:nth-of-type(4) input[type=text]:disabled,
+section:nth-of-type(4) input[type=email]:disabled,
+section:nth-of-type(4) textarea:disabled {
+  background: #343f4d;
+  color: rgb(231, 231, 231);
 }
 section:nth-of-type(4) textarea {
   margin-bottom: 5px;
@@ -711,6 +718,11 @@ section:nth-of-type(4) .button {
 }
 section:nth-of-type(4) .button:hover {
   background: #04c2c9;
+}
+section:nth-of-type(4) .button:disabled {
+  background: #04c2c9c9;
+  color: grey;
+  cursor: wait;
 }
 section:nth-of-type(4) #success {
   height: 0;
