--- a/src/globalStyle/index.css
+++ b/src/globalStyle/index.css
@@ -235,9 +235,6 @@ section {
   transition: ease;
 }
 
-.toast-expand {
-  /* height: 36px; */
-}
 
 .toast-error {
   background: #db3d21;
@@ -266,7 +263,6 @@ section {
     display: flex;
     width: 100%;
     flex-direction: column;
-    /* justify-content: space-between; */
     justify-content: center;
     align-items: center;
   }
@@ -277,5 +273,6 @@ section {
     justify-content: center;
     align-items: center;
     row-gap: 0.2rem;
+    margin-bottom: 0.25rem;
   }
 } 
