--- a/src/globalStyle/reference.css
+++ b/src/globalStyle/reference.css
@@ -138,14 +138,6 @@ a {
   overflow-x: hidden;
 }
 
-.canvas {
-  background: url("http://findmatthew.com/style/../img/filler.png") center center/cover;
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100vw;
-}
 
 .button {
   border: 2px solid #fff;
@@ -275,9 +267,9 @@ nav.fixed {
   top: 0;
   /* height: 3.2rem; */
 }
-nav.fixed.desk {
-  /* animation: popDown 0.2s; */
-}
+/* nav.fixed.desk {
+  animation: popDown 0.2s;
+} */
 nav .link-wrap {
   background: #333;
   height: 0;
@@ -418,7 +410,9 @@ section:nth-of-type(1) .hexagon:hover {
 }
 section:nth-of-type(1) .button {
   margin-bottom: 53px;
-  padding: 12px 40px 12px 15px;
+  /* padding: 12px 40px 12px 15px; */
+  /* padding: 12px 15px; */
+  padding: 12px 20px;
   position: relative;
 }
 section:nth-of-type(1) .button .mdi {
@@ -595,11 +589,6 @@ section:nth-of-type(3) .text {
   top: 0;
   width: 100%;
 }
-section:nth-of-type(3) #gallery {
-  /* margin: 20px 0; */
-  /* height: 100%; */
-  /* height: fit-content; */
-}
 section:nth-of-type(3) #gallery .text,
 section:nth-of-type(3) #gallery .button {
   color: #1b242f;
@@ -641,7 +630,7 @@ section:nth-of-type(3) #gallery .mix .card {
   width: calc(50vw - 8px);
 }
 section:nth-of-type(3) #gallery .mix:hover .card {
-  opacity: 0;
+  opacity: 0.15;
 }
 section:nth-of-type(3) #gallery .mix:hover .text {
   cursor: default;
@@ -757,10 +746,9 @@ footer {
   padding: 70px 0 50px 0;
   position: relative;
 }
-footer .mdi-chevron-double-up {
-  background: #e31b6d;
+footer .bi-chevron-double-up {
+  background: #d11b67;
   cursor: pointer;
-  font-size: 30pt;
   height: 50px;
   left: 0;
   line-height: 40pt;
@@ -768,10 +756,10 @@ footer .mdi-chevron-double-up {
   position: absolute;
   right: 0;
   top: -25px;
-  transition: background 0.5s;
+  transition: background 0.25s;
   width: 47px;
 }
-footer .mdi-chevron-double-up:hover {
+footer .bi-chevron-double-up:hover {
   background: #fb1f79;
 }
 footer .icon-wrap .icon {
@@ -928,7 +916,7 @@ footer .footnote .highlight {
     line-height: 36pt;
   }
   section:nth-of-type(1) .button {
-    padding: 12px 50px 12px 20px;
+    padding: 12px 20px;
   }
   section:nth-of-type(1) .button .mdi {
     top: 16px;
@@ -972,9 +960,6 @@ footer .footnote .highlight {
   section:nth-of-type(3) .float-bar {
     height: 30px;
   }
-  section:nth-of-type(3) #gallery .mix .card {
-    /* height: 300px; */
-  }
   section:nth-of-type(4) {
     padding: 130px 0 180px 0;
   }
@@ -1007,34 +992,34 @@ footer .footnote .highlight {
     opacity: 0;
   }
 
-  .animated.waypoint#gallery {
+  /* .animated.waypoint#gallery {
     opacity: 1;
-  }
-  .animated.waypoint#gallery .mix:nth-child(1) > div {
+  } */
+  .project-card-1 {
     animation: slideUp 0.75s 0.1s ease both;
     opacity: 0;
   }
-  .animated.waypoint#gallery .mix:nth-child(2) > div {
+  .project-card-2 {
     animation: slideUp 0.75s 0.2s ease both;
     opacity: 0;
   }
-  .animated.waypoint#gallery .mix:nth-child(3) > div {
+  .project-card-3 {
     animation: slideUp 0.75s 0.3s ease both;
     opacity: 0;
   }
-  .animated.waypoint#gallery .mix:nth-child(4) > div {
+  .project-card-4 {
     animation: slideUp 0.75s 0.4s ease both;
     opacity: 0;
   }
-  .animated.waypoint#gallery .mix:nth-child(5) > div {
+  .project-card-5 {
     animation: slideUp 0.75s 0.5s ease both;
     opacity: 0;
   }
-  .animated.waypoint#gallery .mix:nth-child(6) > div {
+  .project-card-6 {
     animation: slideUp 0.75s 0.6s ease both;
     opacity: 0;
   }
-  .animated.waypoint#gallery .mix:nth-child(7) > div {
+  .project-card-7 {
     animation: slideUp 0.75s 0.7s ease both;
     opacity: 0;
   }
