--- a/src/globalStyle/reference.css
+++ b/src/globalStyle/reference.css
@@ -246,7 +246,7 @@ a {
   height: 100px;
 }
 
-nav {
+/* nav {
   bottom: 0;
   left: 0;
   position: absolute;
@@ -265,11 +265,7 @@ nav.fixed {
   left: 0;
   position: fixed;
   top: 0;
-  /* height: 3.2rem; */
 }
-/* nav.fixed.desk {
-  animation: popDown 0.2s;
-} */
 nav .link-wrap {
   background: #333;
   height: 0;
@@ -282,7 +278,6 @@ nav .link-wrap {
 }
 nav .link-wrap.visible {
   height: 180px;
-  /* height: fit-content; */
   padding-bottom: 0.8rem;
 }
 nav .link-wrap div {
@@ -308,7 +303,7 @@ nav .mdi-menu {
 }
 nav .active {
   color: #e31b6d;
-}
+} */
 
 
 
@@ -882,7 +877,7 @@ footer .footnote .highlight {
     left: 25px;
   }
 
-  nav .link-wrap {
+  /* nav .link-wrap {
     background: none;
     height: initial;
     overflow: visible;
@@ -903,7 +898,7 @@ footer .footnote .highlight {
   }
   nav .mdi-menu {
     display: none;
-  }
+  } */
 
   
 
